<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="rating_name">Rating:</string>
    <string name="email_address">E-mail:</string>
    <string name="feedback">FEEDBACK:</string>
    <string name="email_value">Enter Email Address</string>
    <string name="feedback_value">Enter Feedback</string>
    <string name="send_button">SEND</string>
    <string name="display_email"></string>
    <string name="display_rating"></string>
    <string name="display_feedback"></string>
</resources>
