<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="1000dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1000dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/email_address"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_value"
            android:inputType="textEmailAddress" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/rating_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />


        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/feedback"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_feedback"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:hint="@string/feedback_value"
            android:inputType="textLongMessage"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginStart="100dp"
            android:onClick="sendmessage"
            android:text="@string/send_button"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>